--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,249 @@
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
+
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  width: 100%;
+  font-family: 'Alumni Sans Pinstripe', sans-serif;
+  font-weight: bold;
+  font-size: x-large;
+    
+}
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/*Navbar */
+.NavBar {
+  width: 100%;
+  background-color: transparent; 
+  position: relative; 
+  height: 200px; 
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NavBar h2{
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.txtLogo {
+  grid-column: 1;
+  margin-right: 15rem;
+  margin-top: 2rem;
 }
 
-.card {
-  padding: 2em;
+
+
+.txtMenu {
+  grid-column: 3;
+  margin-top: 3rem;
+  margin-left: 5rem;
+  list-style: none;
+  display: flex;
+  gap: 30px;
 }
 
-.read-the-docs {
-  color: #888;
+.txtMenu a {
+  color: white;
+}
+
+.txtMenu a:hover {
+text-decoration: underline;
+text-decoration-thickness: 1px;
+}
+
+.dropDown {
+  position: relative;
+}
+
+/* Enlace de "Portfolio", que parece un link común */
+.dropdown-link {
+  color: white;
+}
+
+/* Ocultar el submenú por defecto */
+.dropDown-content {
+  display: none;
+  position: absolute;
+  list-style: none;
+  background-color: transparent;
+  margin-top: 10px;
+}
+
+.dropDown-content li {
+  color: white;
+  margin-top: 5px;
+}
+
+
+/* Mostrar el submenú cuando se pasa el ratón sobre el enlace "Portfolio" */
+.dropDown:hover .dropDown-content {
+  display: block;
+}
+
+.NavBar.home-nav {
+  color: white;
+}
+
+.NavBar.other-nav h2{
+  color: black;
+}
+
+.NavBar.other-nav a {
+  color: black;
+}
+
+.cuerpo {
+  position: relative;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cuerpo img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.cuerpo h1 {
+position: relative;
+color: white;
+font-size: 3rem;
+text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/*contacto*/
+
+.formCreate {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin-bottom: 10rem;
+  font-family: 'Roboto', sans-serif;
+}
+
+.labelForm {
+  display: block;
+  margin-bottom: 12px;
+  font-size: 16px;
+  color: #333;
+}
+
+.textCreate {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  transition: border-color 0.3s ease;
+}
+
+/*photos*/
+.general {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+  height: 100vh;
+}
+
+.general aside {
+margin-left: 6rem;
+text-align: left;
+}
+
+.cuerpo-photo {
+  height: 100vh;
+  width: 70%;
+  margin-left: 25%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  border: 1px solid #f5f5f7;
+  border-radius: 5px;
+  gap: 15px;
+}
+
+.cuerpo-photo > div {
+  
+  background-color: #f5f5f7; /* Ejemplo: Fondo de las celdas */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px;
+}
+
+
+.cuerpo-photo div:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 12px black;
+}
+
+/*Footer*/
+.cuerpoFooter {
+  position: relative;
+  height: 100vh;
+  margin: 0;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+
+.Footer {
+  background-color: transparent; /* Background color for the footer */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center; /* Center the items horizontally */
+  align-items: center; /* Center the items vertically */
+  color: white;
+  margin-top: 10rem;
+}
+
+.txtFooter2 {
+  grid-column: 2;
+}
+
+
+.Footer h2, h3{
+color: white;
+}
+
+.Footer a {
+  color: white;
+}
+
+.Footer.home-footer h3 {
+  color: white;
+}
+
+.Footer.other-footer h2, h3{
+  color: black;
+}
+
+.Footer.other-footer a {
+  color: black;
 }
